src/test/deca/context/valid/rvalue_init_float_to_int_inclass.deca
// Test la règle 3.28: 

{
    float f = 3;    
}




// Resultat:
//TODOTEST
