src/test/deca/context/invalid/rvalue_assign_float_to_int_inclass.deca
// Test la règle 3.28: 

class A  {
    float f = 3.14;
    int x = f;
}



// Resultat:
//TODOTEST
